new version 1.2.6, generate config.h and update TEA scripts

--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ AC_INIT([syslog],[m4_esyscmd_s([cat VERSION])],[mxmanghi@apache.org],[tcl-syslog
 TEA_INIT()
 
 AC_CONFIG_AUX_DIR(tclconfig)
+AC_CONFIG_HEADERS([config.h])
 
 #--------------------------------------------------------------------
 # Load the tclConfig.sh file
