Override MODULE_SCOPE in order to suit the tcl.h definition

--- a/configure.ac
+++ b/configure.ac
@@ -181,6 +181,7 @@ TEA_PROG_TCLSH
 # substituting the AC variables in. Include these here.
 #--------------------------------------------------------------------
 
+AC_DEFINE([MODULE_SCOPE], [extern], [Define module scope visibility])
 AC_CONFIG_FILES([Makefile pkgIndex.tcl doc/tcl-syslog.n])
 #AC_CONFIG_FILES([sampleConfig.sh])
 
