the codes could clash on the calls to openlog/closelog that actually keep global data, thus causing races and therefore explaining the sporadic loss of the -ident argument definition

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ config.log
 config.status
 configure
 configure~
-libsyslog1.2.4.so
+libsyslog*.so
+libtcl9syslog*.so
 syslog.o
 .gdb_history
 config.h*
