--- a/doc/tcl-syslog.n.md.in
+++ b/doc/tcl-syslog.n.md.in
@@ -20,14 +20,10 @@ syslog::close
 syslog ?-ident ident? ?-facility facility? -pid? ?-perror? level message
 ```
 
-Returns: nothing
-
 # DESCRIPTION
 
-Syslog is a standard for forwarding log messages to the local machine and to other
-logging services available on an TCL/IP network. It is also
-used to refer to the implementation of this standard and API, that supports
-both remote and local logging. It is typically used for computer system
+Syslog is a standard for forwarding log messages to local and other
+logging services available on an TCL/IP network. It is typically used for computer system
 management and security auditing; usually to aggregate log messages in a
 central repository. It is standardized within the Syslog working group of the IETF.
 Syslog is available in all POSIX compliant and POSIX-like Operating Systems.
@@ -35,25 +31,42 @@ Syslog is available in all POSIX compliant and POSIX-like Operating Systems.
 This package provides a Tcl interface to the standard *syslog* service.
 It creates a Tcl namespace with commands for opening and closing the 
 connection to the syslogd facility, sending messages to the syslog service
-and query the connection status
-
-It's supposed to provide local and remote logging, as these are syslogd capabilities.
+and query the connection status. It's supposed to provide local and remote
+logging.
 
 The current version provides also the global namespace command *syslog* for compatibility
-with earlier versions of the package but it's been revised to focus on resource 
+with earlier versions of the package which it's been revamped and extended to focus on resource 
 consumption, computational overheads and multi-threading programming
 
 # GLOBAL PER PROCESS OPTIONS
 
-The syslog facility is available to any process 
+The syslog facility is available to any process by calling the *syslog* command.
+If a connection to the *syslog* facility hasn't been already established
+*syslog* does it implicitly by calling *openlog*. Even though this is handy 
+and preserved in *tcl-syslog*, calling openlog is meaninful if done just once at
+process startup. It's connection parameters are process-wide and shared among
+threads. For this purpose this version of the package implements three new
+command *::syslog::open*, *::syslog::close* and *::syslog::isopen*.
+::syslog::open accept options to be passed to *openlog* which are supposed to
+not change for the process lifetime. Actual logging is done through command
+::syslog::log* which in turn accept its own set of options. Option to be passed
+to *::syslog::open* are
 
-- `-ident` *ident* is an optional string argument that is used by syslog to differentiate between processes and log contexts. It is up to the user to specify any string here. *This option causes the closelog to be called and the openlog
+- `-ident` *ident* is an optional string argument that is used by syslog to
+differentiate between processes and log contexts. It is up to the user to
+specify any string here. 
 
-- `-pid` sets up syslog to print also the process pid in the log message. This options is most efficiently used as argument to 
+- `-pid` sets up syslog to print also the process pid in the log message. This
+options is most efficiently used as argument to 
 
 - `-perror` prints the message also to stderr.
 
-- `-facility` *facility* is an optional string dictated by syslog, and categorizes the entity that logs the message, in the following categories/facilities:
+- `-nodelay` the connection to the *syslog* facility is done right away instead
+  of waiting for the first message to be issued
+
+- `-facility` *facility* is an optional string dictated by syslog, and
+categorizes the entity that logs the message, in the following
+categories/facilities:
 
 ```
 Facility    Description
@@ -72,11 +85,14 @@ user        generic user-level messages
 uucp        UUCP subsystem
 ```
 
-# PER THREAD CONNECTION OPTIONS
-
 The default facility is `"user"`.
 
-`-level' *level* describes the severity of the message. In order to control the message level possible arguments are:
+# LOGGING AND PER THREAD CONNECTION OPTIONS
+
+Command *::syslog::log* is the command for logging. The following options can be
+specified.
+
+- `-level' *level* describes the severity of the message. In order to control the message level possible arguments are:
 
 ```
 Priority    Description
@@ -89,8 +105,21 @@ notice      normal, but significant, condition
 info        informational message
 debug       debug-level message
 ```
+the default level is *info*
 
-`-priority` the priority argument is equivalent to `-level` and it's kept for compatibility. It will be removed in future releases
+- `-priority` the priority argument is equivalent to `-level`
+
+- `-format` provides a limited support for the *syslog* formatting argument. For
+  this argument to be meaningful is must be a string where somewhere the '%s'
+string qualifier must appear. A full support will be provided in future releases.
+
+- `-facility` is the same argument accepted by command
+
+
+# COMPATIBILITY
+
+The global space command *syslog* is 
+
 
 # EXAMPLE
 
